-
Type:
Bug
-
Status: Resolved
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 1.7.0
-
Fix Version/s: 1.7.0
-
Labels:None
-
Code Review:
While running raft_consensus_stress-itest, I noticed tserver sometimes crashes with the stack trace like below:
@ 0x7f188e6c92fd google::LogMessage::Fail() at ??:0 @ 0x7f188e6cb1bd google::LogMessage::SendToLog() at ??:0 @ 0x7f188e6c8e39 google::LogMessage::Flush() at ??:0 @ 0x7f188e6cbc5f google::LogMessageFatal::~LogMessageFatal() at ??:0 @ 0x7f189028e5af kudu::StackTraceCollector::RevokeSigData() at ??:0 @ 0x7f189028ecba kudu::StackTraceCollector::AwaitCollection() at ??:0 @ 0x7f189028ee86 kudu::GetThreadStack() at ??:0 @ 0x7f189028efb7 kudu::DumpThreadStack() at ??:0 @ 0x7f189031cc49 kudu::KernelStackWatchdog::RunThread() at ??:0 @ 0x7f1890320af9 boost::_mfi::mf0<>::operator()() at ??:0 @ 0x7f1890320a60 boost::_bi::list1<>::operator()<>() at ??:0 @ 0x7f1890320a0a boost::_bi::bind_t<>::operator()() at ??:0 @ 0x7f18903207ed boost::detail::function::void_function_obj_invoker0<>::invoke() at ??:0 @ 0x7f1891eb2568 boost::function0<>::operator()() at ??:0 @ 0x7f18903aeaad kudu::Thread::SuperviseThread() at ??:0 @ 0x7f189418d184 start_thread at ??:0 @ 0x7f188c6b7ffd clone at ??:0 @ (nil) (unknown)